adding rand-token to mock Auth API

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.14.16",
+    "rand-token": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
