--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.14.16",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
