modified:   src/App.tsx modified:   src/UI/Feedback/Loading.tsx new file:   src/data/hooks/auth.ts modified:   src/features/Auth.tsx modified:   src/features/Auth/Login.tsx modified:   src/features/Auth/Register.tsx new file:   src/features/RouteProtection.tsx modified:   src/index.css new file:   src/services/auth.ts new file:   src/services/supabase.ts modified:   src/utils/Auth/login.ts modified:   src/utils/Auth/register.ts

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.14.16",
+    "@supabase/supabase-js": "^2.38.4",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
