--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@mui/icons-material": "^5.14.16",
     "@supabase/supabase-js": "^2.38.4",
     "formik": "^2.4.5",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "yup": "^1.3.2"
   },
