--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@mui/x-data-grid": "^6.19.3",
     "@tanstack/react-query": "^5.17.19",
     "eslint-plugin-react": "^7.33.2",
     "framer-motion": "^11.0.3",
