--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test":"vitest --watch"
+    "test": "vitest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -42,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-vitest": "^0.3.22",
     "jsdom": "^24.0.0",
+    "msw": "^2.2.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.3.1"
