--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@":["src"],
+      "@/":["src/"],
+      "@/*":["src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
