--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "baseUrl": ".",
     "paths": {
-      "@":["src"],
-      "@/":["src/"],
-      "@/*":["src/*"]
+      "@":["./src"],
+      "@/":["./src/"],
+      "@/*":["./src/*"],
+      "@data/": ["./src/data/"],
     },
 
     /* Bundler mode */
